[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "chonkie[semantic]>=0.5.0",
    "gliner>=0.2.16",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "tiktoken>=0.9.0",
]
